--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <!-- ! Hero Section -->
       <div
         id="hero"
-        class="min-h-screen bg-gradient-to-br from bg-purple-50 via-orange-200 to-transparent"
+        class="min-h-screen bg-gradient-to-b from bg-purple-50 via-orange-200 to-transparent"
       >
         <div
           id="hero-container"
@@ -167,6 +167,396 @@
             >
               Read Docs
             </button>
+          </div>
+        </div>
+
+        <div id="animation-slider" class="flex flex-col gap-8">
+          <div id="companies-title" class="flex justify-center gap-6">
+            <img src="./assets/asset 2.svg" alt="" class="translate-y-2" />
+            <span class="font-semibold">APPS POWERED BY TODESKTOP</span>
+            <img
+              src="./assets/asset 2.svg"
+              alt=""
+              class="translate-y-2 -scale-x-100"
+            />
+          </div>
+
+          <div id="companies-logo" class="flex flex-col gap-4">
+            <div
+              id="line1"
+              class="flex w-screen gap-4 -translate-x-48 transition-transform ease-linear"
+            >
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 3.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 4.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 5.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 6.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 7.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 8.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 9.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 10.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 11.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 12.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 13.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 14.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+            </div>
+            <div
+              id="line2"
+              class="flex w-screen gap-4 -translate-x-36 transition-transform ease-linear"
+            >
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 15.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 16.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 17.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 18.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 19.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 20.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 21.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 22.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 23.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 24.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 25.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 26.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+            </div>
+            <div
+              id="line3"
+              class="md:hidden flex w-screen gap-4 -translate-x-48 transition-transform ease-linear"
+            >
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 27.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 28.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 29.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 3.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 3.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 3.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 3.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 3.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 3.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 3.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 3.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+              <div
+                class="flex flex-col justify-center items-center min-w-24 min-h-24 border border-gray-400 rounded-lg md:min-h-32 md:min-w-32"
+              >
+                <img
+                  src="./assets/asset 3.png"
+                  alt=""
+                  class="w-12 h-12 md:h-16 md:w-16"
+                />
+                <span class="font-semibold">Bounce</span>
+              </div>
+            </div>
           </div>
         </div>
       </div>
