completed card section

--- a/index.html
+++ b/index.html
@@ -560,8 +560,234 @@
           </div>
         </div>
       </div>
+
+      <!--! Step by step -->
+      <div id="steps" class="mt-20 flex flex-col items-center">
+        <div id="steps-card" class="px-8 w-full sm:w-auto sm:px-16">
+          <h1
+            class="text-5xl font-semibold font-inter text-gray-800 sm:font-bold"
+          >
+            How it works
+          </h1>
+          <div id="cards">
+            <div
+              id="card"
+              class="w-fit border border-gray-200 px-6 py-8 flex flex-col gap-8 rounded-xl mt-14 lg:flex-row"
+            >
+              <div id="left" class="mt-4 lg:w-1/2">
+                <div
+                  id="text-design"
+                  class="border border-yellow-400 w-fit px-3 py-1 rounded-lg bg-yellow-50 text-yellow-700 font-semibold mb-4"
+                >
+                  Step 1
+                </div>
+                <div id="content" class="flex flex-col gap-4">
+                  <h1 class="text-4xl font-medium font-poppins text-gray-800">
+                    Bootstrap straight from your web app
+                  </h1>
+                  <p class="text-lg font-inter font-light">
+                    Copy and paste your web app url into ToDesktop. Customise
+                    your app design, app icon and window frame UI with no code.
+                  </p>
+                  <ul class="grid grid-cols-2 gap-2">
+                    <li class="flex gap-2 items-center">
+                      <i class="fa-solid fa-check text-gray-500"></i>
+                      <span class="text-lg font-light border-b border-gray-500"
+                        >Multiple Windows</span
+                      >
+                    </li>
+                    <li class="flex gap-2 items-center">
+                      <i class="fa-solid fa-check text-gray-500"></i>
+                      <span class="text-lg font-light border-b border-gray-500"
+                        >Multiple Windows</span
+                      >
+                    </li>
+                    <li class="flex gap-2 items-center">
+                      <i class="fa-solid fa-check text-gray-500"></i>
+                      <span class="text-lg font-light border-b border-gray-500"
+                        >Multiple Windows</span
+                      >
+                    </li>
+                    <li class="flex gap-2 items-center">
+                      <i class="fa-solid fa-check text-gray-500"></i>
+                      <span class="text-lg font-light border-b border-gray-500"
+                        >Multiple Windows</span
+                      >
+                    </li>
+                    <li class="flex gap-2 items-center">
+                      <i class="fa-solid fa-check text-gray-500"></i>
+                      <span class="text-lg font-light border-b border-gray-500"
+                        >Multiple Windows</span
+                      >
+                    </li>
+                    <li class="flex gap-2 items-center">
+                      <i class="fa-solid fa-check text-gray-500"></i>
+                      <span class="text-lg font-light border-b border-gray-500"
+                        >Multiple Windows</span
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+
+              <div
+                id="card-img"
+                class="mt-8 sm:mt-0 sm:w-1/2 flex justify-center"
+              >
+                <img
+                  src="https://anuj-kumar-sharma.github.io/tailwind-landing-page/assets/asset%2066.svg"
+                  alt=""
+                />
+              </div>
+            </div>
+            <div
+              id="card"
+              class="w-fit border border-gray-200 px-6 py-8 flex flex-col gap-8 rounded-xl mt-14 lg:flex-row"
+            >
+              <div id="left" class="mt-4 lg:w-1/2">
+                <div
+                  id="text-design"
+                  class="border border-yellow-400 w-fit px-3 py-1 rounded-lg bg-yellow-50 text-yellow-700 font-semibold mb-4"
+                >
+                  Step 2
+                </div>
+                <div id="content" class="flex flex-col gap-4">
+                  <h1 class="text-4xl font-medium font-poppins text-gray-800">
+                    Bootstrap straight from your web app
+                  </h1>
+                  <p class="text-lg font-inter font-light">
+                    Copy and paste your web app url into ToDesktop. Customise
+                    your app design, app icon and window frame UI with no code.
+                  </p>
+                  <ul class="grid grid-cols-2 gap-2">
+                    <li class="flex gap-2 items-center">
+                      <i class="fa-solid fa-check text-gray-500"></i>
+                      <span class="text-lg font-light border-b border-gray-500"
+                        >Multiple Windows</span
+                      >
+                    </li>
+                    <li class="flex gap-2 items-center">
+                      <i class="fa-solid fa-check text-gray-500"></i>
+                      <span class="text-lg font-light border-b border-gray-500"
+                        >Multiple Windows</span
+                      >
+                    </li>
+                    <li class="flex gap-2 items-center">
+                      <i class="fa-solid fa-check text-gray-500"></i>
+                      <span class="text-lg font-light border-b border-gray-500"
+                        >Multiple Windows</span
+                      >
+                    </li>
+                    <li class="flex gap-2 items-center">
+                      <i class="fa-solid fa-check text-gray-500"></i>
+                      <span class="text-lg font-light border-b border-gray-500"
+                        >Multiple Windows</span
+                      >
+                    </li>
+                    <li class="flex gap-2 items-center">
+                      <i class="fa-solid fa-check text-gray-500"></i>
+                      <span class="text-lg font-light border-b border-gray-500"
+                        >Multiple Windows</span
+                      >
+                    </li>
+                    <li class="flex gap-2 items-center">
+                      <i class="fa-solid fa-check text-gray-500"></i>
+                      <span class="text-lg font-light border-b border-gray-500"
+                        >Multiple Windows</span
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+
+              <div
+                id="card-img"
+                class="mt-8 sm:mt-0 sm:w-1/2 flex justify-center"
+              >
+                <img
+                  src="https://anuj-kumar-sharma.github.io/tailwind-landing-page/assets/asset%2066.svg"
+                  alt=""
+                />
+              </div>
+            </div>
+            <div
+              id="card"
+              class="w-fit border border-gray-200 px-6 py-8 flex flex-col gap-8 rounded-xl mt-14 lg:flex-row"
+            >
+              <div id="left" class="mt-4 lg:w-1/2">
+                <div
+                  id="text-design"
+                  class="border border-yellow-400 w-fit px-3 py-1 rounded-lg bg-yellow-50 text-yellow-700 font-semibold mb-4"
+                >
+                  Step 3
+                </div>
+                <div id="content" class="flex flex-col gap-4">
+                  <h1 class="text-4xl font-medium font-poppins text-gray-800">
+                    Bootstrap straight from your web app
+                  </h1>
+                  <p class="text-lg font-inter font-light">
+                    Copy and paste your web app url into ToDesktop. Customise
+                    your app design, app icon and window frame UI with no code.
+                  </p>
+                  <ul class="grid grid-cols-2 gap-2">
+                    <li class="flex gap-2 items-center">
+                      <i class="fa-solid fa-check text-gray-500"></i>
+                      <span class="text-lg font-light border-b border-gray-500"
+                        >Multiple Windows</span
+                      >
+                    </li>
+                    <li class="flex gap-2 items-center">
+                      <i class="fa-solid fa-check text-gray-500"></i>
+                      <span class="text-lg font-light border-b border-gray-500"
+                        >Multiple Windows</span
+                      >
+                    </li>
+                    <li class="flex gap-2 items-center">
+                      <i class="fa-solid fa-check text-gray-500"></i>
+                      <span class="text-lg font-light border-b border-gray-500"
+                        >Multiple Windows</span
+                      >
+                    </li>
+                    <li class="flex gap-2 items-center">
+                      <i class="fa-solid fa-check text-gray-500"></i>
+                      <span class="text-lg font-light border-b border-gray-500"
+                        >Multiple Windows</span
+                      >
+                    </li>
+                    <li class="flex gap-2 items-center">
+                      <i class="fa-solid fa-check text-gray-500"></i>
+                      <span class="text-lg font-light border-b border-gray-500"
+                        >Multiple Windows</span
+                      >
+                    </li>
+                    <li class="flex gap-2 items-center">
+                      <i class="fa-solid fa-check text-gray-500"></i>
+                      <span class="text-lg font-light border-b border-gray-500"
+                        >Multiple Windows</span
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+
+              <div
+                id="card-img"
+                class="mt-8 sm:mt-0 sm:w-1/2 flex justify-center"
+              >
+                <img
+                  src="https://anuj-kumar-sharma.github.io/tailwind-landing-page/assets/asset%2066.svg"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      
+      <div class="h-[1000px]"></div>
     </main>
-    <div class="h-[1000px]"></div>
+
     <script src="script.js"></script>
   </body>
 </html>
