--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
 
         <div
           id="cards"
-          class="mt-16 flex flex-col gap-4 sm:grid sm:grid-cols-3"
+          class="mt-16 flex flex-col gap-4 lg:grid lg:grid-cols-3"
           style="grid-auto-rows: 96px"
         >
           <!-- ! Card 1 -->
@@ -907,6 +907,46 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <div id="slider-animation" class="mt-28 px-8 sm:px-16">
+        <div
+          class="border border-gray-300 h-auto overflow-hidden p-4 rounded-xl"
+        >
+          <div
+            id="line4"
+            class="flex items-center gap-8 whitespace-nowrap p-6 text-gray-800 font-inter"
+          >
+            <h3 class="text-2xl font-semibold my-0 mx-2">Download Analytics</h3>
+            <span>•</span>
+            <h3 class="text-2xl font-semibold my-0 mx-2">Custom Menus</h3>
+            <span>•</span>
+            <h3 class="text-2xl font-semibold my-0 mx-2">
+              Multi-window support
+            </h3>
+            <span>•</span>
+            <h3 class="text-2xl font-semibold my-0 mx-2">Trays</h3>
+            <span>•</span>
+            <h3 class="text-2xl font-semibold my-0 mx-2">Deep Linking</h3>
+            <span>•</span>
+            <h3 class="text-2xl font-semibold my-0 mx-2">Download Analytics</h3>
+            <span>•</span>
+            <h3 class="text-2xl font-semibold my-0 mx-2">Launch at startup</h3>
+            <span>•</span>
+            <h3 class="text-2xl font-semibold my-0 mx-2">Launch at startup</h3>
+            <span>•</span>
+            <h3 class="text-2xl font-semibold my-0 mx-2">Offline Support</h3>
+            <span>•</span>
+            <h3 class="text-2xl font-semibold my-0 mx-2">Good Signaling</h3>
+          </div>
+        </div>
+      </div>
+
+      <!-- !Customer Stories Section -->
+      <div id="customer-stories" class="mt-28 px-8 sm:px-16">
+        <h1 class="text-5xl font-semibold text-gray-800 font-poppins">
+          Customer stories
+        </h1>
       </div>
 
       <div class="h-[1000px]"></div>
