complete dwld section

--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@
         </div>
 
         <div id="cards" class="flex flex-col gap-6 mt-6 lg:flex-row lg:gap-4">
-          <div id="card2" class="border border-gray-300 rounded-xl">
+          <div id="card2" class="border border-gray-300 rounded-2xl">
             <div class="p-6 flex flex-col gap-6">
               <div id="heading" class="flex gap-4 items-center">
                 <div
@@ -1082,7 +1082,7 @@
               </div>
             </div>
           </div>
-          <div id="card3" class="border border-gray-300 rounded-xl">
+          <div id="card3" class="border border-gray-300 rounded-2xl">
             <div class="p-6 flex flex-col gap-6">
               <div id="heading" class="flex gap-4 items-center">
                 <div
@@ -1130,7 +1130,7 @@
               </div>
             </div>
           </div>
-          <div id="card4" class="border border-gray-300 rounded-xl">
+          <div id="card4" class="border border-gray-300 rounded-2xl">
             <div class="p-6 flex flex-col gap-6">
               <div id="heading" class="flex gap-4 items-center">
                 <div
@@ -1181,7 +1181,44 @@
         </div>
       </div>
 
-      
+      <div id="container" class="mt-8 px-8 sm:16 md:px-32">
+        <div
+          class="rounded-2xl flex flex-col bg-black lg:flex-row mt-12 pt-6 lg:pt-10"
+        >
+          <div class="flex flex-col gap-4 p-8 lg:flex-1 lg:gap-8">
+            <span class="text-gray-400 font-display font-medium font-inter"
+              >READY TO START BUILDING?</span
+            >
+            <h2
+              class="text-4xl text-white leading-tight lg:text-5xl font-inter font-semibold"
+            >
+              Create your desktop app for free*
+            </h2>
+            <p class="text-lg font-light text-gray-400 lg:text-xl font-inter">
+              ToDesktop Builder will take you step-by-step through the process
+              of creating your first desktop app in just a few minutes.
+            </p>
+            <button
+              class="bg-[#1e40af] text-white py-3 rounded-lg hover:bg-opacity-90 flex justify-center items-center gap-4"
+            >
+              <i class="fa-solid fa-download"></i>
+              <span>Download ToDestop Builder</span>
+            </button>
+            <p class="text-gray-400 text-xs italic leading-tight font-inter">
+              *You can create a desktop app and run it on your computer for
+              free. You will only be charged if you want to create a
+              distributable app for your customers.
+            </p>
+          </div>
+          <div class="lg:w-1/2">
+            <img
+              src="https://anuj-kumar-sharma.github.io/tailwind-landing-page/assets/asset%2046.png"
+              class="pl-12"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
 
       <div class="h-[1000px]"></div>
     </main>
