--- a/index.html
+++ b/index.html
@@ -1181,7 +1181,7 @@
         </div>
       </div>
 
-      <div id="container" class="mt-8 px-8 sm:16 md:px-32">
+      <div id="container" class="mt-8 px-8 sm:px-16 md:px-32">
         <div
           class="rounded-2xl flex flex-col bg-black lg:flex-row mt-12 pt-6 lg:pt-10"
         >
@@ -1220,8 +1220,325 @@
         </div>
       </div>
 
-      <div class="h-[1000px]"></div>
+      <div id="pricing-container" class="mt-32 px-8 sm:px-16 md:px-32">
+        <h1
+          class="text-4xl font-poppins text-gray-800 font-semibold lg:text-5xl lg:font-bold"
+        >
+          Choose a plan that fits your needs
+        </h1>
+        <div id="cards" class="mt-12 flex flex-col gap-6 lg:flex-row lg:gap-8">
+          <div
+            id="card1"
+            class="border border-gray-300 rounded-2xl flex flex-col gap-6 p-8"
+          >
+            <h2
+              class="text-2xl font-medium font-inter lg:text-4xl lg:font-semibold"
+            >
+              Free-trial
+            </h2>
+            <p class="font-inter text-lg font-light">
+              For personal use or testing your app before deploying to
+              customers.
+            </p>
+            <p class="text-lg font-inter font-light">
+              <span class="font-bold text-2xl">$0</span>/month
+            </p>
+            <p class="font-inter text-lg">KEY FEATURES</p>
+            <div id="selection" class="flex flex-col gap-4">
+              <div class="flex gap-2 items-center">
+                <i class="fa-solid fa-check text-gray-500"></i>
+                <p class="font-inter text-lg font-light">
+                  Free for personal use
+                </p>
+              </div>
+              <div class="flex gap-2 items-center">
+                <i class="fa-solid fa-check text-gray-500"></i>
+                <p class="font-inter text-lg font-light">
+                  Free for personal use
+                </p>
+              </div>
+              <div class="flex gap-2 items-center">
+                <i class="fa-solid fa-xmark text-gray-500"></i>
+                <p class="font-inter text-lg font-light">
+                  Free for personal use
+                </p>
+              </div>
+              <div class="flex gap-2 items-center">
+                <i class="fa-solid fa-xmark text-gray-500"></i>
+                <p class="font-inter text-lg font-light">
+                  Free for personal use
+                </p>
+              </div>
+              <button
+                class="bg-gray-50 text-[#1e40af] border border-gray-200 py-3 rounded-lg flex justify-center items-center gap-4 font-inter font-medium hover:border-gray-800"
+              >
+                Read Docs
+              </button>
+            </div>
+          </div>
+          <div
+            id="card2"
+            class="border border-gray-300 rounded-2xl flex flex-col gap-6 p-8"
+          >
+            <h2
+              class="text-2xl font-medium font-inter lg:text-4xl lg:font-semibold"
+            >
+              Essential
+            </h2>
+            <p class="font-inter text-lg font-light">
+              For personal use or testing your app before deploying to
+              customers.
+            </p>
+            <p class="text-lg font-inter font-light">
+              <span class="font-bold text-2xl">$99</span>/month
+            </p>
+            <p class="font-inter text-lg">KEY FEATURES</p>
+            <div id="selection" class="flex flex-col gap-4">
+              <div class="flex gap-2 items-center">
+                <i class="fa-solid fa-check text-gray-500"></i>
+                <p class="font-inter text-lg font-light">
+                  Free for personal use
+                </p>
+              </div>
+              <div class="flex gap-2 items-center">
+                <i class="fa-solid fa-check text-gray-500"></i>
+                <p class="font-inter text-lg font-light">
+                  Free for personal use
+                </p>
+              </div>
+              <div class="flex gap-2 items-center">
+                <i class="fa-solid fa-xmark text-gray-500"></i>
+                <p class="font-inter text-lg font-light">
+                  Free for personal use
+                </p>
+              </div>
+              <div class="flex gap-2 items-center">
+                <i class="fa-solid fa-xmark text-gray-500"></i>
+                <p class="font-inter text-lg font-light">
+                  Free for personal use
+                </p>
+              </div>
+              <button
+                class="bg-gray-50 text-[#1e40af] border border-gray-200 py-3 rounded-lg flex justify-center items-center gap-4 font-inter font-medium hover:border-gray-800"
+              >
+                Read Docs
+              </button>
+            </div>
+          </div>
+          <div
+            id="card3"
+            class="border border-gray-300 rounded-2xl flex flex-col gap-6 p-8"
+          >
+            <h2
+              class="text-2xl font-medium font-inter lg:text-4xl lg:font-semibold"
+            >
+              Professional
+            </h2>
+            <p class="font-inter text-lg font-light">
+              For personal use or testing your app before deploying to
+              customers.
+            </p>
+            <p class="text-lg font-inter font-light">
+              <span class="font-bold text-2xl">$99</span>/month
+            </p>
+            <p class="font-inter text-lg">KEY FEATURES</p>
+            <div id="selection" class="flex flex-col gap-4">
+              <div class="flex gap-2 items-center">
+                <i class="fa-solid fa-check text-gray-500"></i>
+                <p class="font-inter text-lg font-light">
+                  Free for personal use
+                </p>
+              </div>
+              <div class="flex gap-2 items-center">
+                <i class="fa-solid fa-check text-gray-500"></i>
+                <p class="font-inter text-lg font-light">
+                  Free for personal use
+                </p>
+              </div>
+              <div class="flex gap-2 items-center">
+                <i class="fa-solid fa-xmark text-gray-500"></i>
+                <p class="font-inter text-lg font-light">
+                  Free for personal use
+                </p>
+              </div>
+              <div class="flex gap-2 items-center">
+                <i class="fa-solid fa-xmark text-gray-500"></i>
+                <p class="font-inter text-lg font-light">
+                  Free for personal use
+                </p>
+              </div>
+
+              <button
+                class="bg-[#1e40af] text-white py-3 rounded-lg flex justify-center items-center gap-4 font-inter font-medium hover:bg-opacity-90"
+              >
+                Read Docs
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- ! FAQS -->
+      <div id="faq" class="mt-28 px-8 sm:px-16 md:px-32">
+        <h2 class="text-5xl font-semibold text-gray-800 font-poppins">FAQs</h2>
+        <div class="grid grid-cols-1 lg:grid-cols-2 mt-6 gap-6 items-start">
+          <div class="group rounded-xl border border-gray-200 bg-gray-50 p-6">
+            <dt
+              class="cursor-pointer flex justify-between items-center"
+              aria-controls="faq-1"
+            >
+              <p class="font-semibold text-lg font-inter">
+                Is ToDesktop For Me?
+              </p>
+              <i
+                class="fa-solid fa-chevron-up -rotate-180 transition-transform"
+              ></i>
+            </dt>
+            <dd id="faq-1" class="hidden text-lg font-light mt-6 font-inter">
+              <p>
+                That depends! If you would like to distribute your web app to
+                your users as a downloadable desktop app then ToDesktop is for
+                you.
+              </p>
+            </dd>
+          </div>
+          <div
+            class="group cursor-pointer rounded-xl border border-gray-200 bg-gray-50 p-6"
+          >
+            <dt class="flex justify-between items-center" aria-controls="faq-2">
+              <p class="font-semibold text-lg font-inter">
+                Is ToDesktop For Me?
+              </p>
+              <i
+                class="fa-solid fa-chevron-up -rotate-180 transition-transform"
+              ></i>
+            </dt>
+            <dd id="faq-2" class="hidden text-lg font-light mt-6 font-inter">
+              <p>
+                That depends! If you would like to distribute your web app to
+                your users as a downloadable desktop app then ToDesktop is for
+                you.
+              </p>
+            </dd>
+          </div>
+          <div class="group rounded-xl border border-gray-200 bg-gray-50 p-6">
+            <dt
+              class="cursor-pointer flex justify-between items-center"
+              aria-controls="faq-3"
+            >
+              <p class="font-semibold text-lg font-inter">
+                Is ToDesktop For Me?
+              </p>
+              <i
+                class="fa-solid fa-chevron-up -rotate-180 transition-transform"
+              ></i>
+            </dt>
+            <dd id="faq-3" class="hidden text-lg font-light mt-6 font-inter">
+              <p>
+                That depends! If you would like to distribute your web app to
+                your users as a downloadable desktop app then ToDesktop is for
+                you.
+              </p>
+            </dd>
+          </div>
+          <div
+            class="group cursor-pointer rounded-xl border border-gray-200 bg-gray-50 p-6"
+          >
+            <dt class="flex justify-between items-center" aria-controls="faq-4">
+              <p class="font-semibold text-lg font-inter">
+                Is ToDesktop For Me?
+              </p>
+              <i
+                class="fa-solid fa-chevron-up -rotate-180 transition-transform"
+              ></i>
+            </dt>
+            <dd id="faq-4" class="hidden text-lg font-light mt-6 font-inter">
+              <p>
+                That depends! If you would like to distribute your web app to
+                your users as a downloadable desktop app then ToDesktop is for
+                you.
+              </p>
+            </dd>
+          </div>
+          <div class="group rounded-xl border border-gray-200 bg-gray-50 p-6">
+            <dt
+              class="cursor-pointer flex justify-between items-center"
+              aria-controls="faq-5"
+            >
+              <p class="font-semibold text-lg font-inter">
+                Is ToDesktop For Me?
+              </p>
+              <i
+                class="fa-solid fa-chevron-up -rotate-180 transition-transform"
+              ></i>
+            </dt>
+            <dd id="faq-5" class="hidden text-lg font-light mt-6 font-inter">
+              <p>
+                That depends! If you would like to distribute your web app to
+                your users as a downloadable desktop app then ToDesktop is for
+                you.
+              </p>
+            </dd>
+          </div>
+          <div
+            class="group cursor-pointer rounded-xl border border-gray-200 bg-gray-50 p-6"
+          >
+            <dt class="flex justify-between items-center" aria-controls="faq-6">
+              <p class="font-semibold text-lg font-inter">
+                Is ToDesktop For Me?
+              </p>
+              <i
+                class="fa-solid fa-chevron-up -rotate-180 transition-transform"
+              ></i>
+            </dt>
+            <dd id="faq-6" class="hidden text-lg font-light mt-6 font-inter">
+              <p>
+                That depends! If you would like to distribute your web app to
+                your users as a downloadable desktop app then ToDesktop is for
+                you.
+              </p>
+            </dd>
+          </div>
+        </div>
+      </div>
     </main>
+
+    <footer class="mt-28 px-8 sm:px-16 md:px-32">
+      <div class="px-8 py-12 flex flex-col gap-24">
+        <div
+          id="row1"
+          class="flex flex-col gap-4 justify-between items-center sm:flex-row"
+        >
+          <div
+            class="flex gap-2 items-center text-gray-900 font-semibold font-poppins text-lg"
+          >
+            <img src="./assets/asset 0.png" alt="" />
+            <p>ToDesktop</p>
+          </div>
+
+          <div
+            class="flex gap-6 items-center text-lg text-gray-700 font-poppins font-light"
+          >
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-github"></i>
+            <p>Documentation</p>
+          </div>
+        </div>
+        <div id="row2" class="flex flex-col justify-center items-center gap-8">
+          <div class="flex items-center gap-2">
+            <img src="./assets/asset 37.svg" alt="" class="w-4 h-4" />
+            <p class="text-gray-700 text-sm font-medium font-inter">
+              A Y Combinator company.
+            </p>
+          </div>
+          <div>
+            <p class="text-gray-400 text-sm font-inter">
+              © 2024 ToDesktop, Inc. All rights reserved.
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="script.js"></script>
   </body>
